Fix instrumentation for latest axis2 (#13490)